objects/Activities_of_Daily_Living__c.object
<CustomObject>
    <fields>
        <fullName>Ability_to_Handle_Finances__c</fullName>
        <label>Ability to Handle Finances</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ability_to_Use_Telephone__c</fullName>
        <label>Ability to Use Telephone</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bathing__c</fullName>
        <label>Bathing</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Activities of Daily Livings</relationshipLabel>
        <relationshipName>Activities_of_Daily_Livings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dressing__c</fullName>
        <label>Dressing</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Feeding__c</fullName>
        <label>Feeding</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Food_Preparation__c</fullName>
        <label>Food Preparation</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grooming__c</fullName>
        <label>Grooming</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Housekeeping__c</fullName>
        <label>Housekeeping</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Laundry__c</fullName>
        <label>Laundry</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mode_of_Transportation__c</fullName>
        <label>Mode of Transportation</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Ambulation__c</fullName>
        <label>Physical Ambulation</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsibility_for_Own_Medications__c</fullName>
        <label>Responsibility for Own Medications</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shopping__c</fullName>
        <label>Shopping</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Toilet__c</fullName>
        <label>Toilet</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Activities of Daily Living</label>
    <nameField>
        <displayFormat>ADL-{0000000000}</displayFormat>
        <label>Activities of Daily Living Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activities of Daily Livings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>